--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
     .rc-top {
       display: flex;
       align-items: flex-start;
-      justify-content: flex-end;
+      justify-content: flex-start;
       gap: 12px;
       margin-bottom: 8px;
     }
